--- a/activities.html
+++ b/activities.html
@@ -34,6 +34,7 @@
         <span style="font-style: italic">Activities</span></p>
     </div>
   </div>
+
   <div class="wrapper">
     <div class="cover">
       <div class="content">
@@ -83,10 +84,9 @@
         <img src="./dataFolder/孔雀写真.jpg" alt="No picture">
         <h4>巨大LEDCUBE</h4>
         <img src="./dataFolder/LEDcube.jpg" alt="No picture">
-        <h3>2018年新歓ロボ</h3> 絶賛製作中です。お楽しみに‼
+        <h3>2018年新歓ロボ</h3>
+        <p>絶賛製作中です。お楽しみに‼</p>
 
-        <p>このように、機械研究会では皆が自由な雰囲気でものづくりを行い活動しています。 少しでも興味がある方はこちらまで←リンク張る
-        </p>
       </div>
     </div>
 
