--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -37,29 +37,29 @@
     <div class="wrapper">
       <div class="cover">
         <div class="content">
-          突然ですが皆さん…<br/>
-          <strong>ものづくりは難しいと勘違いしていませんか？</strong><br/> えっ！っと思った皆さんぜひ新歓に来てください!!
-          <img src="./dataFolder/Roberuta_shadow.png" alt="Roberuta" style="width: 100px">
 
           <h2>サークル紹介</h2>
           <p>私たちは、京都大学機械研究会という大学公認サークルです。</p>
           <p>活動内容はロボコンや電子工作、プログラミングなど様々です。 自由にものづくりを楽しむことができ、かつ将来の仕事などに役立つスキルが身につくという素晴らしいサークルです。
           </p>
-          <p>未経験者も大歓迎!!</p>
           <p>皆で楽しくものづくりライフを楽しみましょう!!</p>
+          <div class="balloon_rb">
+            <p>未経験者も大歓迎！</p>
+          </div>
 
-          <h2>新歓説明会</h2> 決まり次第、案内いたします。
+          <h2>新歓説明会</h2>
+          <p>決まり次第、連絡いたします。</p>
 
           <h2>よくある質問</h2>
           <div class="question" style="width: 317px">会費はどれくらいかかりますか？</div>
-          <p>A.…半期5000円です。結構安い!!</p>
+          <p class="ans">半期5000円です。結構安い!!</p>
 
           <div class="question" style="width: 318px">本当に初心者でも大丈夫なの？</div>
-          <p>A.…もちろん大丈夫です!! 4~5月は新入生講習があります。 7月に新入生ロボコンもあるのでそこでスキルアップもできますよ。
+          <p class="ans">もちろん大丈夫です!! 4~5月は新入生講習があります。 7月に新入生ロボコンもあるのでそこでスキルアップもできますよ。
           </p>
 
           <div class="question" style="width: 248px">文系でも大丈夫ですか？</div>
-          <p>A.…もちろんです。意欲のある方ならだれでも歓迎です!!</p>
+          <p class="ans">もちろんです。意欲のある方ならだれでも歓迎です!!</p>
         </div>
       </div>
 
