--- a/introduction.html
+++ b/introduction.html
@@ -57,7 +57,8 @@
         </p>
 
 
-        <p>少しでも気になった方はぜひ新歓へ←リンク張る</p>
+        <p>少しでも気になった方はぜひ新歓へ</p>
+        <p style="text-align: right"><a class="link_button" href="forFreshmans.html">新歓情報</a></p>
       </div>
     </div>
 
