Fixed unloaded images

--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -18,7 +18,7 @@
       <div class="bar_menu_box">
         <div class="bar_menu">menu</div>
         <ul>
-          <li class="bar_menu"><a href="topPage.html">TOP</a></li>
+          <li class="bar_menu"><a href="index.html">TOP</a></li>
           <li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
           <li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
           <li class="bar_menu"><a href="activities.html">活動内容</a></li>
@@ -118,7 +118,7 @@
         <div class="siteMap_box">
           <p><i class="fas fa-link fa-color: white fa-fw"></i>Links</p>
           <ul>
-            <li><a href="http://www.kikaiken.org/">機械研旧HP</a></li>
+            <li><a href="http://www.kikaiken.org/index_170315.html">機械研旧HP</a></li>
             <li><a href="http://kyoto-u.ac.jp/ja">京都大学</a></li>
             <li><a href="http://www.mechatronics.me.kyoto-u.ac.jp/">松野研究室</a></li>
           </ul>
