--- a/activities.html
+++ b/activities.html
@@ -19,7 +19,7 @@
     <div class="bar_menu_box">
       <div class="bar_menu">menu</div>
       <ul>
-        <li class="bar_menu"><a href="topPage.html">TOP</a></li>
+        <li class="bar_menu"><a href="index.html">TOP</a></li>
         <li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
         <li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
         <li class="bar_menu"><a href="activities.html">活動内容</a></li>
@@ -81,11 +81,11 @@
         </p>
         <h3>2017年新歓ロボ</h3> 2017年度新歓ロボは以下の二つを製作しました。
         <h4>孔雀ロボ</h4>
-        <img src="./dataFolder/孔雀写真.jpg" alt="No picture">
+        <img src="./dataFolder/kujaku.jpg" alt="No picture">
         <h4>巨大LEDCUBE</h4>
         <img src="./dataFolder/LEDcube.jpg" alt="No picture">
         <h3>2018年新歓ロボ</h3>
-        <p>絶賛製作中です。お楽しみに‼</p>
+        <p>絶賛製作中です。お楽しみに?</p>
 
       </div>
     </div>
@@ -145,7 +145,7 @@
       <div class="siteMap_box">
         <p><i class="fas fa-link fa-color: white fa-fw"></i>Links</p>
         <ul>
-          <li><a href="http://www.kikaiken.org/">機械研旧HP</a></li>
+          <li><a href="http://www.kikaiken.org/index_170315.html">機械研旧HP</a></li>
           <li><a href="http://kyoto-u.ac.jp/ja">京都大学</a></li>
           <li><a href="http://www.mechatronics.me.kyoto-u.ac.jp/">松野研究室</a></li>
         </ul>
