--- a/activities.html
+++ b/activities.html
@@ -52,7 +52,7 @@
         <img src="./dataFolder/catchRobo2016.jpg" alt="catchRobo2016">
         <h4>2017年</h4>
         <p>ワークは森永製菓のMARIEビスケット。それぞれ独立した吸引機構により華麗なハンドリングが可能です。</p>
-        <img src="./dataFolder/picture_2017.png" alt="catchRobo2017">
+        <img src="./dataFolder/picture_2017.jpg" alt="catchRobo2017">
 
         <h3>マイクロマウス</h3>
         <p>　マイクロマウスは、自律的に迷路を探索し、ゴールまでたどり着く時間を競う競技 (マイクロマウス競技)と、ラインを自律的にトレースし、ゴールするまでの時間を競うロボトレース部門 があります。
@@ -70,20 +70,20 @@
         </p>
         <h3>巨大UFOキャッチャー</h3>
         <p>機械研名物の巨大UFOキャッチャー。これは見に来るしかない！</p>
-        <img src="./dataFolder/UFOcatcher.jpg" alt="No picture">
+        <img src="./dataFolder/UFOcatcher.jpg" alt="Load Failed">
         <h3>イライラ棒</h3>
         <p>懐かしのイライラ棒が機械研員によってリバイバル！<br /> 毎年大盛況です。
         </p>
-        <img src="./dataFolder/irairaStick.jpg" alt="No Picture">
+        <img src="./dataFolder/irairaStick.jpg" alt="Load Failed">
 
         <h2>新歓ロボ</h2>
         <p>機械研究会では、自分たちの技術力向上や新入生を快く迎え入れることを目的に 新歓ロボと称して、新二回生が主体となり一つの大型のロボットを製作しています。
         </p>
         <h3>2017年新歓ロボ</h3> 2017年度新歓ロボは以下の二つを製作しました。
         <h4>孔雀ロボ</h4>
-        <img src="./dataFolder/kujaku.jpg" alt="No picture">
+        <img src="./dataFolder/peacockRobo.jpg" alt="Load Failed">
         <h4>巨大LEDCUBE</h4>
-        <img src="./dataFolder/LEDcube.jpg" alt="No picture">
+        <img src="./dataFolder/LEDcube.jpg" alt="Load Failed">
         <h3>2018年新歓ロボ</h3>
         <p>絶賛製作中です。お楽しみに?</p>
 
