--- a/topPage.html
+++ b/topPage.html
@@ -50,18 +50,18 @@
     style="background-image: url(./dataFolder/shinkanRobocon2.jpg)">
     <p class="mini_box">新歓情報</p>
   <a/>
-  <a href="#" class="menu_box no_decoration"
-    style="background-image: url(./dataFolder/tracers.png)">
+  <a href="introduction.html" class="menu_box no_decoration"
+    style="background-image: url(./dataFolder/tracers.jpg)">
     <p class="mini_box">サークル紹介</p>
   </a>
 </div>
 
 <div class="container_100">
   <a href="activities.html" class="menu_box no_decoration"
-    style="background-image: url(./dataFolder/孔雀写真.jpg)">
+    style="background-image: url(./dataFolder/peacockRobo.jpg)">
     <p class="mini_box">活動内容</p>
   </a>
-  <a href="#" class="menu_box no_decoration"
+  <a href="members.html" class="menu_box no_decoration"
     style="background-image: url(./dataFolder/member.jpg)">
     <p class="mini_box">メンバー紹介</p>
   </a>
@@ -77,6 +77,10 @@
     <li>
       <div class="date">2018/02/13</div>
       <span class="info_title">新歓ロボ始動!!</span>
+    </li>
+    <li>
+      <div class="date">2018/02/13</div>
+      <div class="info_title">新webページが完成しました。</div>
     </li>
     <li>
       <div class="date">2018/02/13</div>
@@ -104,7 +108,7 @@
       <a href="http://kikaiken.blogspot.jp/">
         <i class="fab fa-blogger faa-tada animated-hover"></i>
       </a>
-      <a href="#">
+      <a href="https://github.com/kikaiken">
         <i class="fab fa-github faa-tada animated-hover"></i>
       </a>
     </div>
@@ -134,10 +138,8 @@
       <p><i class="far fa-envelope fa-color: white fa-fw"></i>Contact us<br/>
         　kikaiken@gmail.com
       </p>
-      <!--
-      <p>　</p>
-      <p>Kyoto Univ.<br />Mechatronics Circle <br />K.U.M.C</p>
-    -->
+      <!--  <p>　</p>
+      <p>Kyoto Univ.<br />Mechatronics Circle <br />K.U.M.C</p>-->
     </div>
 
     <address>Copyright(C)2018 kikaiken Allright Reserved.</address>
