--- a/introduction.html
+++ b/introduction.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>機械研究会サークル紹介</title>
+  <title>機械研紹介</title>
   <link href="css/reset.css" rel="stylesheet" type="text/css">
   <link href="css/css.css" rel="stylesheet" type="text/css">
   <link href="webPageStyle.css" rel="stylesheet">
@@ -21,11 +21,12 @@
     <div class="bar_menu_box">
       <div class="bar_menu">menu</div>
       <ul>
-        <li class="bar_menu"><a href="index.html">TOP</a></li>
+        <li class="bar_menu"><a href="topPage.html">TOP</a></li>
         <li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
         <li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
         <li class="bar_menu"><a href="activities.html">活動内容</a></li>
         <li class="bar_menu"><a href="members.html">メンバー紹介</a></li>
+        <li class="bar_menu"><a href="results.html">活動成績</a></li>
       </ul>
     </div>
   </header>
@@ -77,7 +78,7 @@
         <a href="http://kikaiken.blogspot.jp/"><i class="fab fa-blogger"></i>Blogger</a>
       </div>
       <div class="social_bar">
-        <a href="#"><i class="fab fa-github"></i>GitHub</a>
+        <a href="https://github.com/kikaiken"><i class="fab fa-github"></i>GitHub</a>
       </div>
     </div>
   </div>
@@ -97,7 +98,7 @@
         <a href="http://kikaiken.blogspot.jp/">
           <i class="fab fa-blogger faa-tada animated-hover"></i>
         </a>
-        <a href="#">
+        <a href="https://github.com/kikaiken">
           <i class="fab fa-github faa-tada animated-hover"></i>
         </a>
       </div>
@@ -126,10 +127,6 @@
       <div class="Qbox">
         <p><i class="far fa-envelope fa-color: white fa-fw"></i>Contact us<br/> 　kikaiken@gmail.com
         </p>
-        <!--
-        <p>　</p>
-        <p>Kyoto Univ.<br />Mechatronics Circle <br />K.U.M.C</p>
-      -->
       </div>
 
       <address>Copyright(C)2018 kikaiken Allright Reserved.</address>
