--- a/members.html
+++ b/members.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>機械研究会メンバー</title>
+  <title>機械研メンバー</title>
   <link href="css/reset.css" rel="stylesheet" type="text/css">
   <link href="css/css.css" rel="stylesheet" type="text/css">
   <link href="webPageStyle.css" rel="stylesheet">
@@ -20,11 +20,12 @@
       <div class="bar_menu_box">
         <div class="bar_menu">menu</div>
         <ul>
-          <li class="bar_menu"><a href="index.html">TOP</a></li>
+          <li class="bar_menu"><a href="topPage.html">TOP</a></li>
           <li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
           <li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
           <li class="bar_menu"><a href="activities.html">活動内容</a></li>
           <li class="bar_menu"><a href="members.html">メンバー紹介</a></li>
+          <li class="bar_menu"><a href="results.html">活動成績</a></li>
         </ul>
       </div>
   </header>
@@ -59,7 +60,7 @@
       <a href="http://kikaiken.blogspot.jp/"><i class="fab fa-blogger"></i>Blogger</a>
     </div>
     <div class="social_bar">
-      <a href="#"><i class="fab fa-github"></i>GitHub</a>
+      <a href="https://github.com/kikaiken"><i class="fab fa-github"></i>GitHub</a>
     </div>
   </div>
 </div>
