--- a/results.html
+++ b/results.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>機械研究会活動成績</title>
+  <title>機械研活動成績</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -26,11 +26,12 @@
       <div class="bar_menu_box">
         <div class="bar_menu">menu</div>
         <ul>
-          <li class="bar_menu"><a href="index.html">TOP</a></li>
+          <li class="bar_menu"><a href="topPage.html">TOP</a></li>
           <li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
           <li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
           <li class="bar_menu"><a href="activities.html">活動内容</a></li>
           <li class="bar_menu"><a href="members.html">メンバー紹介</a></li>
+          <li class="bar_menu"><a href="results.html">活動成績</a></li>
         </ul>
       </div>
   </header>
@@ -42,34 +43,35 @@
     </div>
   </div>
 
-
-  <div class="table_box">
-    <h2>活動成績</h2>
-
-    <table border="1">
-      <tr><th>年度</th><th>大会名</th><th>受賞</th></tr>
-      <tr><td rowspan="4">2017</td><td>第七回キャチロボバトルコンテスト</td><td>準優勝</td></tr>
-      <tr><td rowspan="3">第38回全日本マイクロマウス大会</td><td>5位入賞</td></tr>
-      <tr><td>特別賞</td></tr>
-      <tr><td>8位入賞</td></tr>
-      <tr><td>2016</td><td>第六回キャチロボバトルコンテスト</td><td>特別賞</td></tr>
-      <tr><td rowspan="2">2015</td><td>第五回キャチロボバトルコンテスト</td><td>準優勝</td></tr>
-      <tr><td>第36回全日本マイクロマウス</td><td>優勝</td></tr>
-      <tr><td rowspan="3">2014</td><td rowspan="2">第26回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
-      <tr><td>ロボット学会会長特別賞</td></tr>
-      <tr><td>第35回全日本マイクロマウス大会</td><td>準優勝</td></tr>
-      <tr><td>2010</td><td>第22回知能ロボットコンテスト</td><td>テクニカルコース準優勝</td></tr>
-      <tr><td>2009</td><td>第一回国際イノベーションコンテスト</td><td>2nd Prize</td></tr>
-      <tr><td rowspan="2">2008</td><td rowspan="2">第20回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
-      <tr><td>ロボット学会会長賞</td></tr>
-      <tr><td rowspan="2">2007</td><td rowspan="2">第19回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
-      <tr><td>ロボット学会会長賞</td></tr>
-      <tr><td>2005</td><td>第五回レスキューロボットコンテスト</td><td>ロボット工学奨励賞</td></tr>
-      <tr><td>2004</td><td>第四回レスキューロボットコンテスト</td><td>ベストロボット賞</td></tr>
-      <tr><td rowspan="2">2003</td><td rowspan="2">第15回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
-      <tr><td>チャレンジ技術賞</td></tr>
-      <tr><td>2002</td><td>第14回知能ロボットコンテスト</td><td>ロボット学会会長賞</td></tr>
-    </table>
+<div class="wrapper">
+  <div class="cover">
+    <div class="table_box">
+      <h2>活動成績</h2>
+      <table border="1">
+        <tr><th>年度</th><th>大会名</th><th>受賞</th></tr>
+        <tr><td rowspan="4">2017</td><td>第七回キャチロボバトルコンテスト</td><td>準優勝</td></tr>
+        <tr><td rowspan="3">第38回全日本マイクロマウス大会</td><td>5位入賞</td></tr>
+        <tr><td>特別賞</td></tr>
+        <tr><td>8位入賞</td></tr>
+        <tr><td>2016</td><td>第六回キャチロボバトルコンテスト</td><td>特別賞</td></tr>
+        <tr><td rowspan="2">2015</td><td>第五回キャチロボバトルコンテスト</td><td>準優勝</td></tr>
+        <tr><td>第36回全日本マイクロマウス</td><td>優勝</td></tr>
+        <tr><td rowspan="3">2014</td><td rowspan="2">第26回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
+        <tr><td>ロボット学会会長特別賞</td></tr>
+        <tr><td>第35回全日本マイクロマウス大会</td><td>準優勝</td></tr>
+        <tr><td>2010</td><td>第22回知能ロボットコンテスト</td><td>テクニカルコース準優勝</td></tr>
+        <tr><td>2009</td><td>第一回国際イノベーションコンテスト</td><td>2nd Prize</td></tr>
+        <tr><td rowspan="2">2008</td><td rowspan="2">第20回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
+        <tr><td>ロボット学会会長賞</td></tr>
+        <tr><td rowspan="2">2007</td><td rowspan="2">第19回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
+        <tr><td>ロボット学会会長賞</td></tr>
+        <tr><td>2005</td><td>第五回レスキューロボットコンテスト</td><td>ロボット工学奨励賞</td></tr>
+        <tr><td>2004</td><td>第四回レスキューロボットコンテスト</td><td>ベストロボット賞</td></tr>
+        <tr><td rowspan="2">2003</td><td rowspan="2">第15回知能ロボットコンテスト</td><td>テクニカルコース優勝</td></tr>
+        <tr><td>チャレンジ技術賞</td></tr>
+        <tr><td>2002</td><td>第14回知能ロボットコンテスト</td><td>ロボット学会会長賞</td></tr>
+      </table>
+    </div>
   </div>
 
   <div class="side_bar">
@@ -87,9 +89,10 @@
       <a href="http://kikaiken.blogspot.jp/"><i class="fab fa-blogger"></i>Blogger</a>
     </div>
     <div class="social_bar">
-      <a href="#"><i class="fab fa-github"></i>GitHub</a>
+      <a href="https://github.com/kikaiken"><i class="fab fa-github"></i>GitHub</a>
     </div>
   </div>
+<div>
 
   <footer>
     <div id="footer_box">
@@ -106,7 +109,7 @@
         <a href="http://kikaiken.blogspot.jp/">
           <i class="fab fa-blogger faa-tada animated-hover"></i>
         </a>
-        <a href="#">
+        <a href="https://github.com/kikaiken">
           <i class="fab fa-github faa-tada animated-hover"></i>
         </a>
       </div>
@@ -136,10 +139,6 @@
         <p><i class="far fa-envelope fa-color: white fa-fw"></i>Contact us<br/>
           　kikaiken@gmail.com
         </p>
-        <!--
-        <p>　</p>
-        <p>Kyoto Univ.<br />Mechatronics Circle <br />K.U.M.C</p>
-      -->
       </div>
 
       <address>Copyright(C)2018 kikaiken Allright Reserved.</address>
