--- a/topPage.html
+++ b/topPage.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>機械研究会TOPPAGE</title>
+  <title>機械研TOP</title>
   <link href="css/reset.css" rel="stylesheet" type="text/css">
   <link href="css/css.css" rel="stylesheet" type="text/css">
   <link href="topPageStyle.css" rel="stylesheet">
@@ -24,10 +24,12 @@
         <li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
         <li class="bar_menu"><a href="activities.html">活動内容</a></li>
         <li class="bar_menu"><a href="members.html">メンバー紹介</a></li>
+        <li class="bar_menu"><a href="results.html">活動成績</a></li>
       </ul>
     </div>
   </header>
 
+  <!--picture header. Please change photos-->
   <div id="header">
     <div id="header_box">
       <p>京大機械研究会<br />
@@ -39,12 +41,13 @@
     <div class="box_line">
       <p>京大機械研究会は京大で唯一のロボットサークルです。</p>
       <p>
-        活動内容は、ロボット作成や電子工作、プログラミングなど様々です。<br /> 
+        活動内容は、ロボット作成や電子工作、プログラミングなど様々です。<br />
         ロボコンに出場したり、学祭に向けて自由に製作物 を作ったりと自由に活動を行うことができます。
       </p>
     </div>
   </div>
 
+  <!--box menu-->
   <div class="container_100">
     <a href="forFreshmans.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/shinkanRobocon2.jpg)">
       <p class="mini_box">新歓情報</p>
@@ -63,11 +66,12 @@
     </a>
   </div>
 
+  <!--New Topics. Please update frequently!!-->
   <div class="new_info">
     <p><i class="fas fa-info fa-2x fa-fw"></i>New Topics</p>
     <ul>
       <li>
-        <div class="date">2018/02/24</div>
+        <div class="date">2018/02/25</div>
         <span class="info_title">追いコンがありました。</span>
       </li>
       <li>
@@ -78,18 +82,11 @@
         <div class="date">2018/02/13</div>
         <div class="info_title">新webページが完成しました。</div>
       </li>
-      <li>
-        <div class="date">2018/02/13</div>
-        <div class="info_title">新webページが完成しました。</div>
-      </li>
     </ul>
   </div>
-  <!--
-<i class="fas fa-bars"></i> menu
-<i class="fas fa-cogs"></i> cogs
--->
 
   <footer>
+    <!--social icons menu-->
     <div id="footer_box">
       <div id="social_icons">
         <a href="https://www.youtube.com/user/kikaiken">
@@ -98,7 +95,7 @@
         <a href="https://twitter.com/mechatrocreator">
         <i class="fab fa-twitter faa-tada animated-hover"></i>
       </a>
-        <a href="#">
+        <a href="#"> <!--insert facebook acconut-->
         <i class="fab fa-facebook faa-tada animated-hover"></i>
       </a>
         <a href="http://kikaiken.blogspot.jp/">
@@ -109,6 +106,7 @@
       </a>
       </div>
 
+      <!--contents-->
       <div class="siteMap_box">
         <p><i class="fas fa-wrench fa-color: white fa-fw"></i> contents</p>
         <ul>
@@ -121,6 +119,7 @@
         </ul>
       </div>
 
+      <!--siteMap-->
       <div class="siteMap_box">
         <p><i class="fas fa-link fa-color: white fa-fw"></i>Links</p>
         <ul>
@@ -130,11 +129,12 @@
         </ul>
       </div>
 
+      <!--contact us-->
       <div class="Qbox">
-        <p><i class="far fa-envelope fa-color: white fa-fw"></i>Contact us<br/> 　kikaiken@gmail.com
+        <p>
+          <i class="far fa-envelope fa-color: white fa-fw"></i>
+          Contact us<br/>kikaiken@gmail.com
         </p>
-        <!--  <p>　</p>
-      <p>Kyoto Univ.<br />Mechatronics Circle <br />K.U.M.C</p>-->
       </div>
 
       <address>Copyright(C)2018 kikaiken Allright Reserved.</address>
