--- a/activities.html
+++ b/activities.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>京大機械研究会　活動内容</title>
+  <title>機械研活動内容</title>
   <link href="css/reset.css" rel="stylesheet" type="text/css">
   <link href="css/css.css" rel="stylesheet" type="text/css">
   <link href="webPageStyle.css" rel="stylesheet">
@@ -19,11 +19,12 @@
     <div class="bar_menu_box">
       <div class="bar_menu">menu</div>
       <ul>
-        <li class="bar_menu"><a href="index.html">TOP</a></li>
+        <li class="bar_menu"><a href="topPage.html">TOP</a></li>
         <li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
         <li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
         <li class="bar_menu"><a href="activities.html">活動内容</a></li>
         <li class="bar_menu"><a href="members.html">メンバー紹介</a></li>
+        <li class="bar_menu"><a href="results.html">活動成績</a></li>
       </ul>
     </div>
   </header>
@@ -49,6 +50,8 @@
         </p>
         <h4>2016年</h4>
         <p>ワークは亀田製菓の手塩屋。左右についている大きなハンドで一気に運ぶ姿がかっこ良いです。</p>
+
+        <!--picture quality is poor-->
         <img src="./dataFolder/catchRobo2016.jpg" alt="catchRobo2016">
         <h4>2017年</h4>
         <p>ワークは森永製菓のMARIEビスケット。それぞれ独立した吸引機構により華麗なハンドリングが可能です。</p>
@@ -70,10 +73,12 @@
         </p>
         <h3>巨大UFOキャッチャー</h3>
         <p>機械研名物の巨大UFOキャッチャー。これは見に来るしかない！</p>
+        <!--picture quality is poor-->
         <img src="./dataFolder/UFOcatcher.jpg" alt="Load Failed">
         <h3>イライラ棒</h3>
         <p>懐かしのイライラ棒が機械研員によってリバイバル！<br /> 毎年大盛況です。
         </p>
+        <!--picture quality is poor-->
         <img src="./dataFolder/irairaStick.jpg" alt="Load Failed">
 
         <h2>新歓ロボ</h2>
@@ -105,7 +110,7 @@
         <a href="http://kikaiken.blogspot.jp/"><i class="fab fa-blogger"></i>Blogger</a>
       </div>
       <div class="social_bar">
-        <a href="#"><i class="fab fa-github"></i>GitHub</a>
+        <a href="https://github.com/kikaiken"><i class="fab fa-github"></i>GitHub</a>
       </div>
     </div>
   </div>
@@ -125,7 +130,7 @@
         <a href="http://kikaiken.blogspot.jp/">
           <i class="fab fa-blogger faa-tada animated-hover"></i>
         </a>
-        <a href="#">
+        <a href="https://github.com/kikaiken">
           <i class="fab fa-github faa-tada animated-hover"></i>
         </a>
       </div>
@@ -154,10 +159,6 @@
       <div class="Qbox">
         <p><i class="far fa-envelope fa-color: white fa-fw"></i>Contact us<br/> 　kikaiken@gmail.com
         </p>
-        <!--
-        <p>　</p>
-        <p>Kyoto Univ.<br />Mechatronics Circle <br />K.U.M.C</p>
-      -->
       </div>
 
       <address>Copyright(C)2018 kikaiken Allright Reserved.</address>
