--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>京大機械研究会新歓</title>
+  <title>機械研新歓</title>
   <link href="css/reset.css" rel="stylesheet" type="text/css">
   <link href="css/css.css" rel="stylesheet" type="text/css">
   <link href="webPageStyle.css" rel="stylesheet">
@@ -19,11 +19,12 @@
       <div class="bar_menu_box">
         <div class="bar_menu">menu</div>
         <ul>
-          <li class="bar_menu"><a href="index.html">TOP</a></li>
+          <li class="bar_menu"><a href="topPage.html">TOP</a></li>
           <li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
           <li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
           <li class="bar_menu"><a href="activities.html">活動内容</a></li>
           <li class="bar_menu"><a href="members.html">メンバー紹介</a></li>
+          <li class="bar_menu"><a href="results.html">活動成績</a></li>
         </ul>
       </div>
     </header>
@@ -79,7 +80,7 @@
           <a href="http://kikaiken.blogspot.jp/"><i class="fab fa-blogger"></i>Blogger</a>
         </div>
         <div class="social_bar">
-          <a href="#"><i class="fab fa-github"></i>GitHub</a>
+          <a href="https://github.com/kikaiken"><i class="fab fa-github"></i>GitHub</a>
         </div>
       </div>
     </div>
@@ -99,7 +100,7 @@
           <a href="http://kikaiken.blogspot.jp/">
           <i class="fab fa-blogger faa-tada animated-hover"></i>
         </a>
-          <a href="#">
+          <a href="https://github.com/kikaiken">
           <i class="fab fa-github faa-tada animated-hover"></i>
         </a>
         </div>
@@ -128,10 +129,6 @@
         <div class="Qbox">
           <p><i class="far fa-envelope fa-color: white fa-fw"></i>Contact us<br/> 　kikaiken@gmail.com
           </p>
-          <!--
-        <p>　</p>
-        <p>Kyoto Univ.<br />Mechatronics Circle <br />K.U.M.C</p>
-      -->
         </div>
 
         <address>Copyright(C)2018 kikaiken Allright Reserved.</address>
