--- a/results.html
+++ b/results.html
@@ -26,7 +26,7 @@
       <div class="bar_menu_box">
         <div class="bar_menu">menu</div>
         <ul>
-          <li class="bar_menu"><a href="topPage.html">TOP</a></li>
+          <li class="bar_menu"><a href="index.html">TOP</a></li>
           <li class="bar_menu"><a href="forFreshmans.html">新歓情報</a></li>
           <li class="bar_menu"><a href="introduction.html">サークル紹介</a></li>
           <li class="bar_menu"><a href="activities.html">活動内容</a></li>
@@ -73,7 +73,6 @@
       </table>
     </div>
   </div>
-
   <div class="side_bar">
     <img src="./dataFolder/logo_gear3_gray.png" alt="kikaiken" style="margin-top: 50px">
     <div class="social_bar" style=".social_bar a:hover i {color: red;}">
@@ -92,7 +91,7 @@
       <a href="https://github.com/kikaiken"><i class="fab fa-github"></i>GitHub</a>
     </div>
   </div>
-<div>
+</div>
 
   <footer>
     <div id="footer_box">
