Added Micromouse introduction

--- a/activities.html
+++ b/activities.html
@@ -61,7 +61,9 @@
         <p>　マイクロマウスは、自律的に迷路を探索し、ゴールまでたどり着く時間を競う競技 (マイクロマウス競技)と、ラインを自律的にトレースし、ゴールするまでの時間を競うロボトレース部門 があります。
         </p>
         <h4>マイクロマウス</h4>
-
+	<p>
+	マイクロマウス競技では、最大32×32マスの広大な迷路を手のひらサイズのロボットが自律的に探索します。ロボットは、最初は壁がどこにあるのかを知らない状態で探索を行い、迷路を記憶していきます。そして、迷路の記憶が完了した後、ゴールへの最短経路を走る高速走行にトライします。
+	</p>
         <h4>ロボトレース</h4>
 
         <h3>関西合同ロボコン</h3>
