--- a/members.html
+++ b/members.html
@@ -40,8 +40,25 @@
 <div class="wrapper">
   <div class="cover">
     <div class="content">
-      <h2>Members</h2>
-      <p>申し訳ございません。ただいま調整中です。　　　　　</p>
+    <div class="member_body">
+      <div class="member_title">2018年度会長</div>
+      <div class="member_image">
+        <img src="dataFolder/kaicho.jpg">
+      </div>
+      <div class="member_text">
+        <p>2018年度京大機械研究会会長<br>
+	ロボット設計からプログラミングまで幅広く手がける勉強熱心な機械男<br>
+	サーボモーターが大好きで今までサーボに費やした時間とお金は計り知れない。<br>
+	無類のガンダムファン。</p>
+	<p>主な制作物<br>
+	二足歩行ロボット　など
+      </div>
+      </div>
+      <div class="member_body">
+        <div class="member_title">
+	  Coming Soon!
+	</div>
+      </div>
     </div>
   </div>
 
