--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
     <p><i class="fas fa-info fa-2x fa-fw"></i>New Topics</p>
     <ul>
       <li>
+        <div class="date">2018/03/20</div>
+        <div class="info_title">メンバー紹介を更新しました。</div>
+      </li>
+      <li>
         <div class="date">2018/02/25</div>
         <span class="info_title">追いコンがありました。</span>
       </li>
