--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -50,7 +50,9 @@
           </div>
 
           <h2>新歓説明会</h2>
-          <p>決まり次第、連絡いたします。</p>
+          <p>2018年度新歓説明会の日程が決定しました！</p>
+	  <img src="dataFolder/bira.jpg">
+	  <p><a href="dataFolder/bira.pdf">こちらから高解像度版をダウンロードできます。</a></p>
 
           <h2>よくある質問</h2>
           <div class="question" style="width: 317px">会費はどれくらいかかりますか？</div>
