Added some comments

--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -64,6 +64,9 @@
 
           <div class="question" style="width: 248px">文系でも大丈夫ですか？</div>
           <p class="ans">もちろんです。意欲のある方ならだれでも歓迎です!!</p>
+          
+	  <div class="question" style="width: 320px">京大生以外でも大丈夫ですか？</div>
+          <p class="ans">過去にも京大生以外の方も参加し活動されてました。メカ好きな人達には大学なんか関係ありません！</p>
         </div>
       </div>
 
