--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
       </p>
     </div>
   </div>
-
+  <div class="container_100" style="margin:50px 0px">
+    <div class="box_line">
+      <p><font color="red"><b>新規加入をご希望の方は機械研の新歓にお越しください</b></font></p>
+      <a href="dataFolder/bira.pdf"><img src="dataFolder/bira.jpg" width="450"></a>
+    </div>
+  </div>
   <!--box menu-->
   <div class="container_100">
     <a href="forFreshmans.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/shinkanRobocon2.jpg)">
