--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
   </div>
   <div class="container_100">
     <div class="box_line">
-      <p><font color="red"><b>新規加入をご希望の方は機械研の新歓にお越しください</b></font></p>
+            <p><font color="red"><b>新規加入をご希望の方は機械研の新歓にお越しください<br>
+        お忙しい方は下のビラに書いてあるTwitterアカウントへのDMもしくはメールでご連絡ください</b></font></p>
       <a href="dataFolder/bira.pdf"><img src="dataFolder/bira.jpg" width="700"></a>
     </div>
   </div>
