[fix] fixed old index page link

--- a/introduction.html
+++ b/introduction.html
@@ -118,7 +118,7 @@
       <div class="siteMap_box">
         <p><i class="fas fa-link fa-color: white fa-fw"></i>Links</p>
         <ul>
-          <li><a href="http://www.kikaiken.org/index_170315.html">機械研旧HP</a></li>
+          <li><a href="http://www.kikaiken.org/index2.html">機械研旧HP</a></li>
           <li><a href="http://kyoto-u.ac.jp/ja">京都大学</a></li>
           <li><a href="http://www.mechatronics.me.kyoto-u.ac.jp/">松野研究室</a></li>
         </ul>
