[update] updated activity catchrobo 2018

--- a/activities.html
+++ b/activities.html
@@ -56,6 +56,10 @@
         <h4>2017年</h4>
         <p>ワークは森永製菓のMARIEビスケット。それぞれ独立した吸引機構により華麗なハンドリングが可能です。</p>
         <img src="./dataFolder/picture_2017.jpg" alt="catchRobo2017">
+        <h4>2018年</h4>
+        <p>ワークはグリコのカプリコ。2台の円筒形ハンドや一個鳥、共通エリアのカプリコを回収するカプリコなど、
+        様々な機構が組み合わさっています。</p>
+        <img src="./dataFolder/catch_2018.jpg" alt="catchRobo2018">
 
         <h3>マイクロマウス</h3>
         <p>　マイクロマウスは、自律的に迷路を探索し、ゴールまでたどり着く時間を競う競技 (マイクロマウス競技)と、ラインを自律的にトレースし、ゴールするまでの時間を競うロボトレース部門 があります。
