--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
     <p><i class="fas fa-info fa-2x fa-fw"></i>New Topics</p>
     <ul>
       <li>
+        <div class="date">2018/08/11</div>
+        <div class="info_title"><a href="activities.html">活動内容を更新しました。2018年キャチロボバトルコンテスト</a></div>
+      </li>
+      <li>
         <div class="date">2018/03/20</div>
         <div class="info_title">メンバー紹介を更新しました。</div>
       </li>
