[forFreshmans] 活動場所を追記

--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -49,6 +49,9 @@
             <p>未経験者も大歓迎！</p>
           </div>
 
+          <h2>活動場所</h2>
+          <p>京都大学吉田キャンパスの西部棟(ルネの横)のC105で春休み中は毎日午後を中心に活動しています。</p>
+
           <h2>よくある質問</h2>
           <div class="question" style="width: 317px">会費はどれくらいかかりますか？</div>
           <p class="ans">半期5000円です。結構安い!!</p>
