[fix] fix missing link to toppage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>機械研TOP</title>
   <link href="css/reset.css" rel="stylesheet" type="text/css">
   <link href="css/css.css" rel="stylesheet" type="text/css">
-  <link href="topPageStyle.css" rel="stylesheet">
+  <link href="indexStyle.css" rel="stylesheet">
   <link href="headerStyle.css" rel="stylesheet">
   <link rel="stylesheet" href="footerStyle.css">
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -121,7 +121,7 @@
       <div class="siteMap_box">
         <p><i class="fas fa-wrench fa-color: white fa-fw"></i> contents</p>
         <ul>
-          <li><a href="topPage.html">TOP</a></li>
+          <li><a href="index.html">TOP</a></li>
           <li><a href="forFreshmans.html">新歓情報</a></li>
           <li><a href="introduction.html">サークル紹介</a></li>
           <li><a href="activities.html">活動内容</a></li>
