--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -111,7 +111,7 @@
         <div class="siteMap_box">
           <p><i class="fas fa-wrench fa-color: white fa-fw"></i> contents</p>
           <ul>
-            <li><a href="topPage.html">TOP</a></li>
+            <li><a href="index.html">TOP</a></li>
             <li><a href="forFreshmans.html">新歓情報</a></li>
             <li><a href="introduction.html">サークル紹介</a></li>
             <li><a href="activities.html">活動内容</a></li>
