--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>機械研TOP</title>
   <link href="css/reset.css" rel="stylesheet" type="text/css">
   <link href="css/css.css" rel="stylesheet" type="text/css">
-  <link href="indexStyle.css" rel="stylesheet">
+  <link href="topPageStyle.css" rel="stylesheet">
   <link href="headerStyle.css" rel="stylesheet">
   <link rel="stylesheet" href="footerStyle.css">
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
