_add_ 2019新歓カレンダー

--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -40,6 +40,11 @@
       <div class="cover">
         <div class="content">
 
+          <h2>2019年度新歓期カレンダー</h2>
+          <p>今年の機械研の新歓イベントスケジュールです！</p>
+          <iframe src="dataFolder/bira2019.pdf#page=1&scrollbar=0&view=Fit" width="670" height="540" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
+          <p><a href="dataFolder/bira2019.pdf">こちらからダウンロードできます。</a></p>
+
           <h2>サークル紹介</h2>
           <p>私たちは、京都大学機械研究会という大学公認サークルです。</p>
           <p>活動内容はロボコンや電子工作、プログラミングなど様々です。 自由にものづくりを楽しむことができ、かつ将来の仕事などに役立つスキルが身につくという素晴らしいサークルです。
