--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
     <p><i class="fas fa-info fa-2x fa-fw"></i>New Topics</p>
     <ul>
       <li>
+        <div class="date">2019/04/08</div>
+        <div class="info_title"><a href="forFreshmans.html">新歓情報を更新しました。</a></div>
+      </li>
+      <li>
         <div class="date">2019/03/10</div>
         <div class="info_title"><a href="forFreshmans.html">新歓情報を更新しました。</a></div>
       </li>
