[fix] fix missing link in members to GitHub

--- a/members.html
+++ b/members.html
@@ -96,7 +96,7 @@
         <a href="http://kikaiken.blogspot.jp/">
           <i class="fab fa-blogger faa-tada animated-hover"></i>
         </a>
-        <a href="#">
+        <a href="https://github.com/kikaiken">
           <i class="fab fa-github faa-tada animated-hover"></i>
         </a>
       </div>
