活動内容と活動実績（NHK）と新歓ロボ（２０１８、２０１９）

--- a/activities.html
+++ b/activities.html
@@ -45,6 +45,12 @@
         <p style="text-align: right">新歓情報→<a class="link_button" href="forFreshmans.html">Check!!</a></p>
 
         <h2>ロボコン</h2>
+	<h3>NHKロボコン</h3>
+	<p>機械研究会はこれまでNHKロボコンにはほとんど出場してきませんでしたが、2019年に初出場しました。そして、初優勝することができました。そして、8月25日にモンゴルで開かれるABUロボコンに日本を代表して出場することになりました。NHKロボコンでの機械研究会の活躍については7月15日に放送されるNHKロボコンのほうをご確認ください。
+	</p>
+	<h4>2019年</h4>
+	<p></p>
+	<img src="./dataFolder/MR1.jpg" alt="NHK2019">
         <h3>キャチロボバトルコンテスト</h3>
         <p> キャチロボバトルコンテストは、京都製作所が主催し、学生が「ものづくり」に 取り組む姿勢を応援するために行われているロボコンです。毎年、課題のお菓子を運搬し、 規定のルールに従い点数で競う競技です。機械研究会は、このキャチロボで2015年、2017年に 準優勝をはたしています。
         </p>
@@ -90,13 +96,15 @@
         <h2>新歓ロボ</h2>
         <p>機械研究会では、自分たちの技術力向上や新入生を快く迎え入れることを目的に 新歓ロボと称して、新二回生が主体となり一つの大型のロボットを製作しています。
         </p>
-        <h3>2017年新歓ロボ</h3> 2017年度新歓ロボは以下の二つを製作しました。
-        <h4>孔雀ロボ</h4>
-        <img src="./dataFolder/peacockRobo.jpg" alt="Load Failed">
-        <h4>巨大LEDCUBE</h4>
+        <h3>2018年新歓ロボ</h3> 2018年度新歓ロボは以下の二つを製作しました。
+        <h4>広告塔ロボ</h4>
+        <img src="./dataFolder/koukokutou.JPG" alt="Load Failed">
+        <h4>画伯</h4>
         <img src="./dataFolder/LEDcube.jpg" alt="Load Failed">
-        <h3>2018年新歓ロボ</h3>
-        <p>絶賛製作中です。お楽しみに?</p>
+        <h3>2019年新歓ロボ</h3>
+        <p>2019年度新歓ロボは以下の二つです</p>
+	<h4>リコーダーロボット</h4>
+	<img src="./dataFolder/ricoder.jpg" alt="Load Failed">
 
       </div>
     </div>
