--- a/results.html
+++ b/results.html
@@ -49,7 +49,9 @@
       <h2>活動成績</h2>
       <table border="1">
         <tr><th>年度</th><th>大会名</th><th>受賞</th></tr>
-        <tr><td rowspan="4">2017</td><td>第七回キャチロボバトルコンテスト</td><td>準優勝</td></tr>
+	<tr><td>2019</td><td>NHK学生ロボコン2019</td><td>優勝</td></tr>
+	<tr><td>2018</td><td>第8回キャチロボバトルコンテスト</td><td>特別賞</td></tr>
+	<tr><td rowspan="4">2017</td><td>第七回キャチロボバトルコンテスト</td><td>準優勝</td></tr>
         <tr><td rowspan="3">第38回全日本マイクロマウス大会</td><td>5位入賞</td></tr>
         <tr><td>特別賞</td></tr>
         <tr><td>8位</td></tr>
