--- a/activities.html
+++ b/activities.html
@@ -100,7 +100,7 @@
         <h4>広告塔ロボ</h4>
         <img src="./dataFolder/koukokutou.JPG" alt="Load Failed">
         <h4>画伯</h4>
-        <img src="./dataFolder/LEDcube.jpg" alt="Load Failed">
+        <img src="./dataFolder/gahaku.jpg" alt="Load Failed">
         <h3>2019年新歓ロボ</h3>
         <p>2019年度新歓ロボは以下の二つです</p>
 	<h4>リコーダーロボット</h4>
@@ -175,7 +175,7 @@
         </p>
       </div>
 
-      <address>Copyright(C)2018 kikaiken Allright Reserved.</address>
+      <address>Copyright(C)2019 kikaiken Allright Reserved.</address>
     </div>
   </footer>
 </body>
