--- a/activities.html
+++ b/activities.html
@@ -46,7 +46,7 @@
 
         <h2>ロボコン</h2>
 	<h3>NHKロボコン</h3>
-	<p>機械研究会はこれまでNHKロボコンにはほとんど出場してきませんでしたが、2019年に初出場しました。そして、初優勝することができました。そして、8月25日にモンゴルで開かれるABUロボコンに日本を代表して出場することになりました。NHKロボコンでの機械研究会の活躍については7月15日に放送されるNHKロボコンのほうをご確認ください。
+	<p>機械研究会はこれまでNHKロボコンにはほとんど出場していませんでしたが、この度2019年度に15年ぶりに出場しました。そして、初優勝することができました。8月25日にモンゴルで開かれるABUロボコンに日本を代表して出場することになります。NHKロボコン2019での機械研究会の活躍については7月15日に放送されるNHKロボコンのほうをご確認ください。
 	</p>
 	<h4>2019年</h4>
 	<p></p>
