活動場所の修正とtopページにNHKロボコンの記載

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
       </p>
     </div>
   </div>
+
+    <h3>最新情報</h3>
+  <div class="container_100" style="margin:50px 0px">
+ 
+    <p>京大機械研はNHK学生ロボコンに15年振りに出場し、初優勝を収めることができました。その模様は7月15日(月・祝)(海の日)にNHK総合で放送されます</p>
+  </div>
+
   <!--box menu-->
   <div class="container_100">
     <a href="forFreshmans.html" class="menu_box no_decoration" style="background-image: url(./dataFolder/shinkanRobocon2.jpg)">
