--- a/introduction.html
+++ b/introduction.html
@@ -50,7 +50,7 @@
         </p>
 
         <h2>活動場所</h2>
-        <p>　活動場所は、主に吉田寮新棟地下の工作室で活動しています。<br /> また、週に二回、会員が都合のいい日に例会を行っています。
+        <p>　活動場所は、主に西部のBOX棟C105にある工作室で活動しています。<br /> また、週に１回、会員が都合のいい日に例会を行っています。（2019年前期は火曜日の昼休みに例会を行っています）
         </p>
 
         <h2>機械研の特徴</h2>
@@ -129,7 +129,7 @@
         </p>
       </div>
 
-      <address>Copyright(C)2018 kikaiken Allright Reserved.</address>
+      <address>Copyright(C)2019 kikaiken Allright Reserved.</address>
     </div>
   </footer>
 </body>
